<resources>
    <!--App name-->
    <string name="app_name">AndroHash</string>

    <!--Activity names-->
    <string name="activity_settings_title">Settings</string>

    <!--Controls-->
    <string name="file_select_hint">Select a file…</string>

    <!--Card titles-->
    <string name="card_file_title">Input File</string>
    <string name="card_hashfunctions_title">Hash Functions</string>

    <!--Hash functions-->
    <string name="hash_md5" translatable="false">MD5</string>
    <string name="hash_sha1" translatable="false">SHA-1</string>
    <string name="hash_sha256" translatable="false">SHA-256</string>
    <string name="hash_sha512" translatable="false">SHA-512</string>

    <!--Placeholder pages-->
    <string name="page_1">Page 1</string>
    <string name="page_2">Page 2</string>
    <string name="page_3">Page 3</string>

    <!--Main menu-->
    <string name="main_menu_item_settings">Settings</string>
    <string name="main_menu_item_donate">Donate</string>
    <string name="main_menu_item_about">About</string>

    <!--Settings-->
    <string name="pref_hash_func_lbl">Default Hash Functions</string>
    <string name="pref_hash_func_key">def_func</string>
    <string name="title_activity_settings">Settings</string>

    <!--Saved Instance keys-->
    <string name="key_saved_instance_file" translatable="false">inputFile</string>

    <!--Snackbars-->
    <string name="sb_permission_storage">Please give permission to access storage</string>
    <string name="sb_checkbox_select">Please select one or more hash functions</string>
    <string name="sb_file_select">Please select an input file</string>

    <string name="card_hashfunctions_info">Please select one or more functions:</string>
</resources>
