<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coord_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_marginStart="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/small_margin">

                <TextView
                    android:id="@+id/card_file_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_file_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_file"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:ems="5"
                    android:focusable="false"
                    android:hint="@string/file_select_hint"
                    android:inputType="none"
                    android:selectAllOnFocus="false" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_hashfunctions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/small_margin">

                <TextView
                    android:id="@+id/card_hashfunctions_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@string/card_hashfunctions_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_hashfunctions_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@string/card_hashfunctions_info" />

                <CheckBox
                    android:id="@+id/cb_md5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/hash_md5" />

                <CheckBox
                    android:id="@+id/cb_sha1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hash_sha1" />

                <CheckBox
                    android:id="@+id/cb_sha256"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hash_sha256" />

                <CheckBox
                    android:id="@+id/cb_sha512"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hash_sha512" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_navigate_next_white_24dp"/>

</android.support.design.widget.CoordinatorLayout>